
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_1__ ;


typedef scalar_t__ git_submodule_ignore_t ;
struct TYPE_4__ {scalar_t__ ignore; } ;
typedef TYPE_1__ git_submodule ;


 scalar_t__ GIT_SUBMODULE_IGNORE_NONE ;
 int assert (TYPE_1__*) ;

git_submodule_ignore_t git_submodule_ignore(git_submodule *submodule)
{
 assert(submodule);
 return (submodule->ignore < GIT_SUBMODULE_IGNORE_NONE) ?
  GIT_SUBMODULE_IGNORE_NONE : submodule->ignore;
}
